--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.4.1", features = [] }
 
 [dependencies]
-tauri = { version = "2.8.5", features = ["tray-icon"] }
+tauri = { version = "2.8.5", features = ["macos-private-api", "tray-icon"] }
 tauri-plugin-shell = "2.3.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1"
